--- a/LinguagemFormal/nbproject/project.properties
+++ b/LinguagemFormal/nbproject/project.properties
@@ -55,7 +55,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=linguagemformal.LinguagemFormal
+main.class=Interface.Tela
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
